syntax = "proto3";

option go_package = "./;pb";

message DeviceReport {
  bytes bootloader = 1;
  bytes procVersion = 2;
  bytes codename = 3;
  bytes incremental = 4;
  bytes fingerprint = 5;
  bytes bootId = 6;
  bytes androidId = 7;
  bytes baseband = 8;
  bytes innerVersion = 9;
}
